--- a/configuration.yaml
+++ b/configuration.yaml
@@ -2,19 +2,16 @@ homeassistant:
   # Name of the location where Home Assistant is running
   name: Home
   # Location required to calculate the time the sun rises and sets
-  latitude: !secrets home_latitude
-  longitude: !secrets home_longitude
+  latitude: !secret home_latitude
+  longitude: !secret home_longitude
   # Impacts weather/sunrise data (altitude above sea level in meters)
   elevation: 806
   # metric for Metric, imperial for Imperial
   unit_system: imperial
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-  time_zone: !secrets home_time_zone
+  time_zone: !secret home_time_zone
   # Customization file
   customize: !include customize.yaml
-
-# Show links to resources in log and frontend
-introduction:
 
 # Enables the frontend
 frontend:
@@ -36,9 +33,6 @@ http:
 updater:
   # Optional, allows Home Assistant developers to focus on popular components.
   # include_used_components: true
-
-# Discover some devices automatically
-#discovery:
 
 # Allows you to issue voice commands from the frontend in enabled browsers
 conversation:
@@ -66,6 +60,10 @@ tts:
 # Cloud
 cloud:
 
+#-----------------------------------------------#
+#                   Includes                    #
+#-----------------------------------------------#
 group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
+hue: !include hue.yaml
